Fix broken links

--- a/docs/_pages/02-tendermint-quality-assurance/v037.md
+++ b/docs/_pages/02-tendermint-quality-assurance/v037.md
@@ -30,7 +30,7 @@ During this iteration of the QA process, the following issues were found:
 ### Finding the Saturation Point
 
 The first goal is to identify the saturation point and compare it with the baseline (v0.34.x).
-For further details, see [this paragraph](../v034/README.md#finding-the-saturation-point)
+For further details, see [this paragraph](../v034#finding-the-saturation-point)
 in the baseline version.
 
 The following table summarizes the results for v0.37.x, for the different experiments
@@ -61,7 +61,7 @@ The saturation point is beyond the diagonal:
 - `r=100,c=4`
 
 which is at the same place as the baseline. For more details on the saturation point, see
-[this paragraph](../v034/README.md#finding-the-saturation-point) in the baseline version.
+[this paragraph](../v034#finding-the-saturation-point) in the baseline version.
 
 The experiment chosen to examine Prometheus metrics is the same as in the baseline:
 **`r=200,c=2`**.
@@ -70,7 +70,7 @@ The load runner's CPU load was negligible (near 0) when running `r=200,c=2`.
 
 ### Examining latencies
 
-The method described [here](../method.md) allows us to plot the latencies of transactions
+The method described [here](../method) allows us to plot the latencies of transactions
 for all experiments.
 
 ![all-latencies](./img/v037_200node_latencies.png)
@@ -80,7 +80,7 @@ The data seen in the plot is similar to that of the baseline.
 ![all-latencies-bl](../v034/img/v034_200node_latencies.png)
 
 Therefore, for further details on these plots,
-see [this paragraph](../v034/README.md#examining-latencies) in the baseline version.
+see [this paragraph](../v034#examining-latencies) in the baseline version.
 
 The following plot summarizes average latencies versus overall throughputs
 across different numbers of WebSocket connections to the node into which
@@ -209,7 +209,7 @@ Version: 1cf9d8e276afe8595cba960b51cd056514965fd1
 We use the same load as in the baseline: `c=4,r=800`.
 
 Just as in the baseline tests, the version of Tendermint used for these tests is affected by #9539.
-See this paragraph in the [baseline report](../v034/README.md#rotating-node-testnet) for further details.
+See this paragraph in the [baseline report](../v034#rotating-node-testnet) for further details.
 Finally, note that this setup allows for a fairer comparison between this version and the baseline.
 
 ### Latencies
