--- a/docs/_pages/02-tendermint-quality-assurance/v034.md
+++ b/docs/_pages/02-tendermint-quality-assurance/v034.md
@@ -60,7 +60,7 @@ where we can see that the load stays close to 0 most of the time.
 
 ### Examining latencies
 
-The method described [here](../method.md) allows us to plot the latencies of transactions
+The method described [here](../method) allows us to plot the latencies of transactions
 for all experiments.
 
 ![all-latencies](./img/v034_200node_latencies.png)
