--- a/.changelog/unreleased/breaking-changes/558-tm10011.md
+++ b/.changelog/unreleased/breaking-changes/558-tm10011.md
@@ -1,2 +1,2 @@
-- Do not allow verifycation of Merkle Proofs against empty trees (`nil` root)
+- Do not allow verifycation of Merkle Proofs against empty trees (`nil` root). `Proof.computeRootHash` is now private.
   ([\#558](https://github.com/cometbft/cometbft/issues/558))
