--- a/.changelog/unreleased/breaking-changes/286-p2p.md
+++ b/.changelog/unreleased/breaking-changes/286-p2p.md
@@ -1,2 +1,2 @@
-- `[p2p]` Modified method `AddReactor` in `Switch` type: it is no longer returning the reactor
+- `[p2p]` Modified method `AddReactor` in `Switch` type: it is no longer returning the added `Reactor`
   ([\#286](https://github.com/cometbft/cometbft/issues/286))
